--- a/style/main.css
+++ b/style/main.css
@@ -7,6 +7,7 @@
   right: 0;
   padding: 0 10px;
   z-index: 9999;
+  font-family: 'Arvo', serif;
 }
 
 .bg {
@@ -62,13 +63,14 @@ h1 .quote {
   max-width: 1180px;
   z-index: 9999;
   color: #FFF;
+  font-family: 'Poiret One', cursive;
+  letter-spacing: 5px;
 }
 
 .menu > div {
   background: rgba(255,255,255,0.45);
   line-height: 80px;
   text-align: center;
-  text-transform: uppercase;
   width: 33%;
   height: 80px;
 }
@@ -78,6 +80,17 @@ h1 .quote {
   float: left;
 }
 
+.menu > div.logo > div.name {
+  height: 28px;
+  line-height: 45px;
+  font-size: 20px;
+  letter-spacing: 3px;
+}
+
+.menu > div.logo > div.desc {
+  line-height: 35px;
+}
+
 .menu > div.blog {
   margin: 0 auto;
   width: 33.7%;
@@ -85,6 +98,15 @@ h1 .quote {
 
 .menu > div.stuff {
   float: right;
+}
+
+hr {
+  opacity: 0.5;
+}
+
+.divider hr {
+  margin-left: 50px;
+  margin-right: 50px;
 }
 
 .stuff .links-mail {
@@ -108,6 +130,13 @@ h1 .quote {
   display: block;
 }
 
+.stuff .links-resume {
+  background: url(../img/resume.png);
+  height: 32px;
+  width: 32px;
+  display: block;
+}
+
 ul {
   list-style: none;
 }
@@ -116,6 +145,7 @@ ul li {
   display: inline-block;
   opacity: 0.5;
   margin: 0 10px;
+  -webkit-transition: all 0.5s ease;
 }
 
 ul li:hover {
